vitrail-pg-macros/tests/ui/fail/insert_result_relation_field.stderr
error: relation field `posts` cannot be returned from scalar insert for model `user`
  --> tests/ui/fail/insert_result_relation_field.rs:5:1
   |
 5 | / schema! {
 6 | |     name insert_schema
 7 | |
 8 | |     model user {
...  |
20 | | }
   | |_^
...
28 |   #[derive(InsertResult)]
   |            ------------ in this derive macro expansion
   |
   = note: this error originates in the macro `__vitrail_assert_insert_result_type_insert_schema_user` which comes from the expansion of the derive macro `InsertResult` (in Nightly builds, run with -Z macro-backtrace for more info)
